# kaptch

./: .gitignore  README.md  build_dataset.py  captcha.onnx  converter.py  dataset.py  inference.py  labeling.html  labeling.py  main.py  model.py  pyproject.toml  train.py  validate.py
publish/: comment.md
src/: checkpoints.py  constants.py  dataset.py  inference.py  misc.py  model.py  torch2onnx.py  train.py  validate.py
src/dataset_build/: NHN_KCP.py  NICE평가정보.py  build_dataset.py  pom.py  sci.py  한국모바일인증.py  한국모바일인증1.py  한국모바일인증1_투명제거.py
src/dataset_transform/: common2flat.py  flat2common.py
src/datasets/: __init__.py  label.py  pom.py
src/labeling/v2/: labeling.html  labeling.py  main.css  main.js
src/labeling/v3/: labeling.html  labeling.py  main.js
src/prepare/: build_dataset.py  crawl.py  label.py  labeling.py  pom.py
src/prepare/label/: main.css  main.js
src/prepare/labeling/: index.html  main.js
src/train/: __init__.py  checkpoint.py  dataset.py  model.py
src/utils/: lazy_import.py
