[project]
name = "chaptcha-breaker"
version = "0.1.0"
description = "한국의 모바일인증 캡챠를 뚫는 프로젝트"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "flask>=3.1.1",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "requests>=2.32.4",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
